--- a/Makefile.in
+++ b/Makefile.in
@@ -8,10 +8,12 @@ all: static @BUILD_SHARED@
 install: _install@BUILD_SHARED@
 static shared _install _installshared:
 	cd src ; $(MAKE) $(AM_MAKEFLAGS) $@
-#	cd samples; $(MAKE) $(AM_MAKEFLAGS) $@
+	# cd samples; $(MAKE) $(AM_MAKEFLAGS) $@
+	# cd xids; $(MAKE) $(AM_MAKEFLAGS) $@
 clean:
 	cd src ; $(MAKE) $(AM_MAKEFLAGS) $@
 	cd samples; $(MAKE) $(AM_MAKEFLAGS) $@
+	cd xids; $(MAKE) $(AM_MAKEFLAGS) $@
 	
 distclean: clean
 	rm -f Makefile */Makefile */config.h config.status config.cache config.log *~ 
